fixed titles not showing when navegating in menu nav var in pc

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,6 +92,7 @@ input:-webkit-autofill {
     font-size: clamp(3.5rem, 5vw, 10rem);
     margin-bottom: 20px;
     text-align: center;
+    padding-top: 80px;
 }
 
 app-about, app-contact-form, app-projects-section {
